# Together

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRITICAL-FIXES.md  Dockerfile  Dockerfile.web  LICENSE  PHASE-1-COMPLETE.md  README.md  SECURITY.md  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.yml  nginx.conf  turn.conf.example
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  deploy-docs.yml  docker.yml  release.yml
clients/desktop/: package-lock.json  package.json
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/icons/: icon.icns
clients/desktop/src-tauri/src/: lib.rs  main.rs
clients/mobile/: app.json  jest.setup.ts  package-lock.json  package.json  tsconfig.json
clients/mobile/__mocks__/: react-native-webrtc.js
clients/mobile/__tests__/api/: client.test.ts  (+1 more)
clients/mobile/src/: App.tsx
clients/web/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
clients/web/e2e/: auth.spec.ts  helpers.ts  messaging.spec.ts  moderation.spec.ts  server-management.spec.ts
clients/web/public/: sw.js
clients/web/src/: App.tsx  main.tsx
docs/: architecture-20-users.md  architecture.md  audit-logging.md  authentication.md  auto-moderation.md  backup-restore.md  bot-api.md  channel-categories.md  channel-permissions.md  code-review-2026-03-19.md  code-review-docs-accuracy-2026-03-20.md  custom-emojis.md  direct-messages.md  discord-analysis.md  documentation-gaps-2026-03-20.md  instance-admin.md  invites.md  ios-voice.md  landing-v2.html  link-previews-and-giphy.md  member-moderation.md  message-editing-deletion.md  message-pinning.md  message-search.md  openapi.json  openapi.yaml  polls-and-events.md  presence-status.md  project-plan.md  project-structure.md  push-notifications.md  reactions.md  release-roadmap.md  research-notes.md  roadmap.md  roles.md  screen-sharing.md  self-hosting.md  server-discovery.md  server-export.md  (+4 more)
docs/plans/: 2026-02-26-link-preview-design.md  2026-02-26-link-preview-plan.md
docs/site/: .gitignore  README.md  package.json
docs/site/.vitepress/: config.mjs
docs/site/docs/: index.md
docs/superpowers/plans/: 2026-03-12-bot-api.md  2026-03-12-message-replies.md  2026-03-12-password-reset-ui.md  2026-03-12-user-profiles.md  2026-03-13-automod.md  2026-03-13-video-calls.md  2026-03-14-custom-emojis.md  2026-03-14-push-notifications.md  2026-03-14-server-templates.md
docs/superpowers/specs/: 2026-03-12-password-reset-ui-design.md  2026-03-13-video-calls-design.md
load-tests/: config.js  run-all.sh  setup.js  test-http.js  test-voice.js  test-websocket.js
scripts/: README.md  backup-full.sh  backup.sh  deploy-docs.sh  generate-openapi.sh  migrate.sh  restore.sh  setup-android-keystore.sh  setup-dev.sh  setup-gpg-signing.sh
security-scan/: plan.md  state.json
server/: .env.example  .gitignore  Cargo.toml  README.md
server/.cargo/: audit.toml
server/migrations/: 20240216000001_users_and_auth.down.sql  20240216000001_users_and_auth.sql  20240216000002_servers_and_channels.down.sql  20240216000002_servers_and_channels.sql  20240216000003_roles_and_permissions.down.sql  20240216000003_roles_and_permissions.sql  20240216000004_messages.down.sql  20240216000004_messages.sql  20240216000005_voice.down.sql  20240216000005_voice.sql  20240216000006_seed_data.down.sql  20240216000006_seed_data.sql  20240216000007_direct_messages.down.sql  20240216000007_direct_messages.sql  20240216000008_reactions.sql  20240216000009_read_states.down.sql  20240216000009_read_states.sql  20240216000010_message_mentions.down.sql  20240216000010_message_mentions.sql  20240216000011_message_threads.down.sql  20240216000011_message_threads.sql  20240216000012_server_discovery.down.sql  20240216000012_server_discovery.sql  20240216000013_polls.down.sql  20240216000013_polls.sql  20240216000014_server_events.down.sql  20240216000014_server_events.sql  20240216000015_pinned_messages.sql  20240216000016_bots.down.sql  20240216000016_bots.sql  20240216000017_automod.sql  20240312000001_audit_logs.sql  20240312000002_password_reset.sql  20240312000003_is_admin.sql  20240314000001_push_subscriptions.down.sql  20240314000001_push_subscriptions.sql  20260313000001_voice_video.down.sql  20260313000001_voice_video.sql  20260314000001_custom_emojis.down.sql  20260314000001_user_bio_pronouns.down.sql  (+14 more)
server/src/: bot_auth.rs  lib.rs  main.rs  openapi.rs  state.rs  webhook_delivery.rs
server/src/auth/: mod.rs
server/src/config/: mod.rs
server/src/db/: mod.rs
server/src/error/: mod.rs
server/src/handlers/: admin.rs  attachments.rs  audit.rs  auth.rs  automod.rs  bots.rs  channel_overrides.rs  channels.rs  custom_emojis.rs  dm.rs  events.rs  export.rs  giphy.rs  go_live.rs  health.rs  ice.rs  invites.rs  link_preview.rs  messages.rs  mod.rs  moderation.rs  notifications.rs  pins.rs  polls.rs  reactions.rs  read_states.rs  roles.rs  search.rs  servers.rs  shared.rs  templates.rs  users.rs  voice.rs  webhooks.rs
server/src/models/: link_preview.rs  mod.rs
server/src/push/: apns.rs  fcm.rs  mod.rs  trigger.rs  web_push.rs
server/src/websocket/: connection_manager.rs  events.rs  handler.rs  mod.rs
server/tests/: admin_tests.rs  attachments_tests.rs  audit_tests.rs  auth_tests.rs  automod_tests.rs  bots_tests.rs  channel_override_tests.rs  channels_tests.rs  custom_emojis.rs  dm_tests.rs  events_tests.rs  export_tests.rs  giphy_tests.rs  go_live_tests.rs  health_tests.rs  invite_tests.rs  link_preview_tests.rs  mention_tests.rs  messages_tests.rs  moderation_tests.rs  pins_tests.rs  polls_tests.rs  push_subscriptions.rs  reactions_tests.rs  read_state_tests.rs  registration_tests.rs  roles_tests.rs  search_scale_tests.rs  search_tests.rs  servers_tests.rs  templates_tests.rs  thread_tests.rs  users_profile_tests.rs  users_tests.rs  voice_tests.rs  webhooks_tests.rs
server/tests/common/: mod.rs
(+289 files in other folders)
