[package]
name = "together-server"
version = "0.1.0"
edition = "2021"
authors = ["Together Contributors"]
license = "AGPL-3.0"
description = "Backend server for Together - a private Discord alternative"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
    "chrono",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
futures = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
thiserror = "1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Phase 2+ dependencies (add as needed):
# jsonwebtoken = "9"           # JWT auth (Phase 2)
# bcrypt = "0.15"              # Password hashing (Phase 2)
# tokio-tungstenite = "0.21"   # WebSocket (Phase 3)
# governor = "0.6"             # Rate limiting (Phase 2-3)
# validator = { version = "0.16", features = ["derive"] }  # Input validation (Phase 2)
# webrtc = "0.9"               # Voice/video (Phase 4) - VERY HEAVY

[dev-dependencies]
# Testing
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "together-server"
path = "src/main.rs"
