[package]
name = "together-server"
version = "0.1.0"
edition = "2021"
authors = ["Together Contributors"]
license = "AGPL-3.0"
description = "Backend server for Together - a private Discord alternative"

[lib]
name = "together_server"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
futures = "0.3"
bytes = "1"                  # Byte buffer type (used by multipart upload handler)

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum-prometheus = "0.7"

# Phase 2: Authentication and API
jsonwebtoken = "9"           # JWT auth
bcrypt = "0.15"              # Password hashing
sha2 = "0.10"                # SHA-256 for refresh token hashing (deterministic)
validator = { version = "0.16", features = ["derive"] }  # Input validation
regex = "1"                  # Used by username format validator
once_cell = "1"              # Lazy-initialised statics (regex, config)
axum-extra = { version = "0.9", features = ["typed-header"] }  # Typed headers for auth
scraper = "0.19"             # HTML parsing for OG tag extraction
url = "2"                    # URL parsing (used by reqwest internally, now explicit)
reqwest = { version = "0.11", features = ["json"] }  # HTTP client for link preview fetching
urlencoding = "2"            # URL percent-encoding for Giphy search query

# Phase 3+ dependencies (add as needed):
# tokio-tungstenite = "0.21"   # WebSocket (Phase 3)
# governor = "0.6"             # Rate limiting (Phase 2-3)
# webrtc = "0.9"               # Voice/video (Phase 4) - VERY HEAVY

[dev-dependencies]
tokio-test = "0.4"
http-body-util = "0.1"   # BodyExt::collect() for reading response bodies in tests

[[bin]]
name = "together-server"
path = "src/main.rs"
